# fastedit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  pypi-publish.yml
doc/fastedit/: Composing.html  Errors.html  Medias.html  index.html
docs/: Composing.html  Medias.html  Overlays.html  index.html  utils.html
docs/0.5.2/: index.html
docs/0.6.0/: Errors.html  Medias.html
fastedit/: Composing.py  Errors.py  Medias.py  Overlays.py  utils.py
media/: test_add_subtitles_ass_hard.txt  test_add_subtitles_soft.txt  test_add_subtitles_srt_hard.txt  test_add_text.txt  test_audio_change_volume.txt  test_audio_cliped.txt  test_audio_composition.txt  test_audio_looped.txt  test_image_to_video.txt  test_media_metadata.txt  test_subtitles.ass  test_subtitles.srt  test_video_add_audio_add.txt  test_video_add_audio_combine.txt  test_video_add_audio_replace.txt  test_video_add_audio_silent.txt  test_video_add_audio_silent_replace.txt  test_video_change_volume.txt  test_video_cliped.txt  test_video_composition.txt  test_video_convert.txt  test_video_looped.txt  test_video_remove_audio.txt  test_video_resize_aspect_ratio.txt  test_video_resize_simple.txt
tests/: test_Composing.py  test_Medias.py
tests/integration/: audio_test.py  medias_test.py  video_test.py
tests/unit/: audio_test.py  composing_test.py  image_test.py  media_test.py  medias_test.py  video_test.py
videdit/: Editing.py  Media.py  Medias.py  README.md
