[metadata]
name = fastedit
version = attr: fastedit.__version__
author = Thomas Margnac
url = https://github.com/ThomasMargnac/fastedit
project_urls =
    Bug Tracker = https://github.com/ThomasMargnac/fastedit/issues
    API Documentation = https://thomasmargnac.github.io/fastedit/
description = A simple python library to edit videos
long_description = file: README.md
long_description_content_type = text/markdown
keywords = video, editing
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License

[options]
packages = find:

[options.extras_require]
dev =
    pytest==7.2.0

[flake8]
extend-ignore =
    # indentation contains tabs
    W191
    # no newline at end of file
    W292